@@ -1,5 +1,7 @@
 Release 1.17 - ???
 
+  * Extract underline and strikethrough in docx (TIKA-2347 and TIKA-2512).
+
   * Cache TikaConfig in EmbeddedDocumentUtil for better performance
     in documents with large number of attachments (TIKA-2511).
 
